// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionStatus > Should match snapshot correctly' 1`] = `
<ForwardRef(Typography)
  ml={1}
  px={2}
  py={0.5}
  sx={
    {
      "backgroundColor": "highlight.green.300",
      "borderRadius": 1,
      "color": "highlight.green.700",
      "height": "fit-content",
      "whiteSpace": "nowrap",
    }
  }
  variant="h6"
>
  <ForwardRef(Grid)
    alignItems="center"
    direction="row"
    spacing={0.5}
  >
    <div>
      available
    </div>
    <NoSeatIcon
      sx={
        {
          "color": "primary.main",
        }
      }
    />
  </ForwardRef(Grid)>
</ForwardRef(Typography)>
`;

exports[`SectionStatus > Should match snapshot correctly' 2`] = `
<ForwardRef(Typography)
  ml={1}
  px={2}
  py={0.5}
  sx={
    {
      "backgroundColor": "highlight.red.300",
      "borderRadius": 1,
      "color": "highlight.red.700",
      "height": "fit-content",
      "whiteSpace": "nowrap",
    }
  }
  variant="h6"
>
  <ForwardRef(Grid)
    alignItems="center"
    direction="row"
    spacing={0.5}
  >
    <div>
      full
    </div>
    <NoSeatIcon
      sx={
        {
          "color": "primary.main",
        }
      }
    />
  </ForwardRef(Grid)>
</ForwardRef(Typography)>
`;

exports[`SectionStatus > Should match snapshot correctly' 3`] = `
<ForwardRef(Typography)
  ml={1}
  px={2}
  py={0.5}
  sx={
    {
      "backgroundColor": "highlight.red.500",
      "borderRadius": 1,
      "color": "white",
      "height": "fit-content",
      "whiteSpace": "nowrap",
    }
  }
  variant="h6"
>
  <ForwardRef(Grid)
    alignItems="center"
    direction="row"
    spacing={0.5}
  >
    <div>
      closed
    </div>
    <NoSeatIcon
      sx={
        {
          "color": "white",
        }
      }
    />
  </ForwardRef(Grid)>
</ForwardRef(Typography)>
`;

exports[`SectionStatus > Should match snapshot correctly' 4`] = `
<ForwardRef(Typography)
  ml={1}
  px={2}
  py={0.5}
  sx={
    {
      "backgroundColor": "highlight.red.500",
      "borderRadius": 1,
      "color": "white",
      "height": "fit-content",
      "whiteSpace": "nowrap",
    }
  }
  variant="h6"
>
  <ForwardRef(Grid)
    alignItems="center"
    direction="row"
    spacing={0.5}
  >
    <div>
      closed
    </div>
    <NoSeatIcon
      sx={
        {
          "color": "white",
        }
      }
    />
  </ForwardRef(Grid)>
</ForwardRef(Typography)>
`;
